Migrate to vite and vitest

--- a/src/components/ItemCard/ItemCard.module.scss
+++ b/src/components/ItemCard/ItemCard.module.scss
@@ -21,7 +21,7 @@
 }
 .image {
     box-shadow: 0.25rem 0.25rem 5px #ccc;
-    cursor: url('../../../public/zoomin.png'), progress;
+    cursor: url('../../../zoomin.png'), progress;
     max-width: 100%;
 }
 .imageFull {
